# Common-Apostille

./: .gitignore  CLAUDE.md  README.md  apostille_marketing_piece.md  app.js  china.html  high_intent_apostille_conversion_piece.md  high_intent_apostille_marketing.md  high_intent_apostille_marketing_final.md  high_intent_apostille_piece.md  immediate_action_apostille_marketing.md  immediate_apostille_conversion_copy.md  index.html  llms.txt  pyproject.toml  requirements.txt  styles.css  urgent_apostille_conversion_piece.md  urgent_apostille_marketing_piece.md
.github/workflows/: code-review.yml  website-audit.yml
bot/: __init__.py  cli.py
bot/core/: __init__.py  analyzer.py  fixer.py  metrics.py  reviewer.py
bot/engine/: __init__.py  recommendations.py  self_improve.py
bot/web/: __init__.py  accessibility.py  auditor.py  performance.py  seo.py
css/: styles.css
js/: app.js
personal-outreach-agent/: .env.example  .gitignore  README.md  requirements.txt  setup.py
personal-outreach-agent/src/: __init__.py  cli.py  config.py  database.py
personal-outreach-agent/tests/: __init__.py  test_deduplicator.py  test_planner.py  (+1 more)
seo_deliverables/: MASTER_AI_SEO_STRATEGY_FINAL.md  README.md  ai_monitoring_query_set.md  ai_seo_strategy_dc_attorneys.md  blog_dc_attorney_guide_will_trust_execution.md  dc_estate_attorney_landing_page.md  faq_estate_attorneys_dc.md  master_seo_strategy_dc_attorneys.md  platform_specific_content_dc_attorneys.md  task_1_keyword_research.md  task_2_website_seo_architecture.md  task_3_geo_strategy.md  task_4_gbp_optimization.md  task_5_local_citation_building.md  task_6_content_creation.md  task_7_competitor_analysis.md  task_8_90_day_seo_action_plan.md
seo_platform/: .env.example  .gitignore  Dockerfile  __init__.py  cli.py  docker-compose.yml  requirements.txt  setup.py
tests/: __init__.py  test_analyzer.py
(+32 files in other folders)
