[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-apostille-bot"
version = "1.0.0"
description = "Code review and improvement bot for Common Notary Apostille"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Common Notary", email = "admin@commonapostille.com"}
]
keywords = ["code-review", "bot", "automation", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pylint>=3.0.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "pydantic>=2.6.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]
ai = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
]

[project.scripts]
apostille-bot = "bot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
